--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
+2025-08-19 (2.1.0)
+        * Update dependencies
+        * Update PDK to 3.4.0
+        * Fix linting errors
+
 2021-06-21 (2.0.2)
         * Bump dependency versions
+
 2020-03-10 (2.0.1) 
         * Change absolute class names
         * Bump dependency versions
